# cipred_pkg

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cipred/: __init__.py  lu2019.py
cipred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
example/data/: 2015-2016.csv  20161203-20161209.csv  20161203-20161209_original.csv  2017-2018.csv  2019-2020.csv  2021-2022.csv  2022_original.csv
example/scripts/: 1-Cipred on air quality at a monitoring station in Oslo, Norway before being quaity controled.ipynb  2-Cipred on air quality at a monitoring station in Oslo, Norway after  being quaity controled.ipynb  3-Cipred MIMO.ipynb
example/scripts/.ipynb_checkpoints/: 0b- Creation of seven networks-checkpoint.ipynb  1-Cipred on air quality at a monitoring station in Oslo, Norway before being quaity controled-checkpoint.ipynb  1-Reading Nature Types geojson from Miljødirektorat-checkpoint.ipynb  2-Cipred on air quality at a monitoring station in Oslo, Norway after  being quaity controled-checkpoint.ipynb
