[project]
name = "cipred"
version = "0.2-b"
authors = [
  { name="Jean-Marie Lepioufle", email="jm@jeanmarie.eu" },
]
description = "Non-parametric error prediction with random forest model."
readme = "README.md"
requires-python = ">=3.8"
license = {text='MIT + Copyright Jean-Marie Lepioufle'}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
  "polars~=0.16.9",
  "numpy~=1.22.4",
  "scikit-learn~=1.2.1"
]

[project.optional-dependencies]
example = [
  "ipython",
  "jupyter",
  "os",
  "matplotlib",
  "pandas",
  "pyarrow"
 ]

[project.urls]
"Homepage" = "https://github.com/j-m-l-e-u/cipred_pkg"
