[project]
name = "cipred"
version = "0.3"
authors = [
  { name="Jean-Marie Lepioufle", email="jm@jeanmarie.eu" },
]
description = "Non-parametric error prediction with random forest model."
readme = "README.md"
requires-python = ">=3.10"
license = {text='MIT + Copyright Jean-Marie Lepioufle'}
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
  "polars~=0.20.31",
  "numpy~=1.23.2",
  "scikit-learn~=1.2.2"
]

[project.optional-dependencies]
example = [
  "ipython",
  "jupyter",
  "os",
  "matplotlib",
  "pandas",
  "pyarrow"
 ]

[project.urls]
"Homepage" = "https://github.com/j-m-l-e-u/cipred_pkg"
